# language_salary

./: .env.example  README.md  main.py  pyproject.toml  settings.py  utils.py
