[tool.poetry]
name = "language_salary"
version = "0.1.0"
description = ""
authors = ["Danil Nikitin <d.nikitin.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pydantic = {extras = ["dotenv"], version = "^1.9.2"}
terminaltables = "^3.1.10"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
types-requests = "^2.28.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
